--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -2077,25 +2077,5 @@
 }
 {% endschema %}
 
-
-<script>
-  // if the product page is handbag
-  if(location.pathname == "/products/handbag"){
-      // declared size and add to cart button
-      var sizer = 'Option-template--20016180887843__main-1';
-      var addToCartCTA = 'ProductSubmitButton-template--20016180887843__main';
-      // if the size dropdown changes then to Unselected add disabled
-      document.getElementById(sizer).onchange = function(e){
-          setTimeout(function () {
-              if(e.target.value == "Unselected") {
-                document.getElementById(addToCartCTA).disabled = 'disabled';
-              } else {
-                document.getElementById(addToCartCTA).disabled = false;  
-              }        
-          },1000)
-      }
-      // Make sure that when the page is refreshed while the size selected is either small, medium or large - the size variant will be unselected after the page is refreshed.
-      document.getElementById(sizer).value = "Unselected"
-      document.getElementById(addToCartCTA).disabled = 'disabled';
-  }
-</script>
+{{ 'swatches.css' | asset_url | stylesheet_tag }}
+<script src="{{ 'swatches.js' | asset_url }}" defer="defer"></script>
